@@ -4,6 +4,7 @@
 - Change: [#13346] Change FootpathScenery to FootpathAddition in all occurrences
 - Fix: [#13334] Uninitialised variables in CustomTabDesc
 - Fix: [#13342] Rename tabChange to onTabChange in WindowDesc interface
+- Improved: [#12917] Changed peep movement so that they stay more spread out over the full width of single tile paths.
 
 0.3.2 (2020-11-01)
 ------------------------------------------------------------------------
